# dual-verification

./: .gitignore  .gitmodules  README.md  abstract_domains.py  adv_net.pkl  bab.py  deepsplit.py  dual_decompose.py  dual_decompose2.py  dual_naive.py  exp_data_agg.py  experiment_utils.py  figure_generator.py  index2.py  lp_relaxation.py  minimum_working_example.ipynb  mip_verify.py  mnist_ffnet.py  multistage.py  neural_nets.py  partitions.py  pyproject.toml  train.py  utilities.py
exp_data/: mnist_ffnet_1.pkl
legacy/: dual_decompose_OLD.py
networks/: cifar_madry.pth  cifar_sgd.pth  mnist_deep.pth  mnist_ffnet.pth  mnist_wide.pth  small_mnist_ff.pkl
notebooks/: minimum_working_example.ipynb  partition_order_plots.ipynb
pickles/: adv_net.pkl
scripts/: #mnist_deep.py#  cifar_madry.py  cifar_sgd.py  dual_naive.py  eran_5x100_verify.py  eran_5x200_verify.py  eran_8x100_verify.py  eran_8x200_verify.py  eran_convSmall_verify.py  lp_relaxation.py  mnist_deep.py  mnist_deep_all.py  mnist_deep_lp.py  mnist_deep_miptime.py  mnist_ffnet.py  mnist_ffnet_ablate.py  mnist_ffnet_all.py  mnist_ffnet_all_similarity.py  mnist_ffnet_mip.py  mnist_wide.py  mnist_wide_all.py  mnist_wide_lp.py  neural_nets.py  prima_onnx_2torch.py  train.py  utilities.py
