[tool.poetry]
name = "dual-verification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
gurobipy = "^9.5.0"
matplotlib = "^3.5.1"
torchvision = "^0.11.2"
seaborn = "^0.11.2"
Mosek = "^9.3.11"
cvxpy = "^1.1.18"
cvxopt = "^1.2.7"
tabulate = "^0.8.9"
joblib = "^1.1.0"
torch = "^1.10.1"
pandas = "^1.4.0"
tables = "^3.7.0"
onnx = "^1.11.0"
onnx2pytorch = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipython = "^7.30.1"
jupyter = "^1.0.0"
python-lsp-server = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
